# leetium

./: .envrc-example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  SECURITY.md  changelog.html  cliff.toml  flake.nix  fly.toml  install.sh  justfile  print.html  providers.html  railway.json  render.yaml  rust-toolchain.toml  sandbox.html  searchindex.js
.beads/: issues.jsonl
.do/: deploy.template.yaml
Formula/: leetium.rb
apps/courier/: Cargo.toml  README.md
apps/courier/deploy/: playbook.yml
apps/courier/deploy/group_vars/: courier.yml
apps/courier/deploy/roles/courier/handlers/: main.yml
apps/courier/deploy/roles/courier/tasks/: main.yml
apps/courier/deploy/roles/courier/templates/: leetium-courier.service.j2
apps/courier/src/: main.rs
crates/agents/: Cargo.toml
crates/agents/src/: memory_writer.rs  model.rs  prompt.rs  provider_chain.rs  runner.rs  skills.rs
crates/auth/: Cargo.toml
crates/auth/src/: credential_store.rs  lib.rs  locality.rs  webauthn.rs
crates/auto-reply/: Cargo.toml
crates/auto-reply/src/: reply.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: boot.rs
crates/browser/: Cargo.toml
crates/browser/src/: container.rs  lib.rs  manager.rs  pool.rs  snapshot.rs  types.rs
crates/canvas/: Cargo.toml
crates/channels/: Cargo.toml
crates/channels/src/: plugin.rs  registry.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs  runtime.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_commands.rs  browser_commands.rs  channel_commands.rs  config_commands.rs  db_commands.rs  doctor_commands.rs  hooks_commands.rs  import_commands.rs  main.rs  memory_commands.rs  node_commands.rs  sandbox_commands.rs  service_commands.rs  tailscale_commands.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  hooks.rs  http.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: agent_defs.rs  env_subst.rs  lib.rs  loader.rs  schema.rs  store.rs  template.rs  validate.rs
crates/cron/: Cargo.toml
crates/cron/migrations/: 20240205100002_init.sql
crates/cron/src/: service.rs  store_file.rs  store_sqlite.rs
crates/gateway/: Cargo.toml
crates/gateway/migrations/: 20240205100003_init.sql
crates/gateway/src/: agent_persona.rs  approval.rs  auth.rs  auth_middleware.rs  auth_routes.rs  auth_webauthn.rs  broadcast.rs  channel.rs  channel_agent_tools.rs  channel_events.rs  channel_store.rs  channel_webhook_dedup.rs  channel_webhook_middleware.rs  channel_webhook_rate_limit.rs  chat.rs  chat_error.rs  cron.rs  graphql_routes.rs  local_llm_setup.rs  logs.rs  mcp_health.rs  mcp_service.rs  mdns.rs  message_log_store.rs  metrics_middleware.rs  metrics_routes.rs  network_audit.rs  node_exec.rs  onboarding.rs  project.rs  provider_setup.rs  server.rs  services.rs  session.rs  state.rs  tailscale.rs  tls.rs  tools_routes.rs  tts_phrases.rs  update_check.rs  (+3 more)
crates/gateway/src/methods/: channel_mux.rs  gateway.rs  mod.rs  node.rs  pairing.rs  services.rs  subscribe.rs  voice.rs
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: context.rs  error.rs  lib.rs  schema.rs
crates/graphql/tests/: integration.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: auth.rs  client.rs  error.rs  lib.rs  tool_bridge.rs  types.rs
crates/media/: Cargo.toml
crates/msteams/: Cargo.toml
crates/msteams/src/: channel_webhook_verifier.rs  config.rs  lib.rs  outbound.rs  plugin.rs  state.rs
crates/node-host/: Cargo.toml
crates/node-host/src/: lib.rs  runner.rs  service.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: config_dir.rs  defaults.rs  device_flow.rs  discovery.rs  flow.rs  kimi.rs  registration_store.rs  storage.rs
crates/oauth/tests/: oauth_tests.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: error.rs  service.rs  state.rs  wizard.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: hook_discovery.rs  hook_eligibility.rs  hook_metadata.rs  hooks.rs  shell_hook.rs
crates/plugins/src/bundled/: boot_md.rs  command_logger.rs  session_memory.rs
crates/projects/: Cargo.toml
crates/projects/migrations/: 20240205100000_init.sql
crates/projects/src/: lib.rs  types.rs  worktree.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/provider-setup/: Cargo.toml
crates/provider-setup/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  async_openai_provider.rs  contract.rs  error.rs  gemini_oauth.rs  genai_provider.rs  github_copilot.rs  kimi_code.rs  lib.rs  openai.rs  openai_codex.rs  openai_compat.rs
crates/providers/src/local_gguf/: chat_templates.rs  mod.rs  models.rs
crates/providers/src/local_llm/: backend.rs  mod.rs  models.rs
crates/qmd/: Cargo.toml
crates/qmd/src/: lib.rs  store.rs
crates/routing/: Cargo.toml
crates/routing/src/: resolve.rs
crates/schema-export/: Cargo.toml  build.rs
crates/service-traits/: Cargo.toml
crates/service-traits/src/: lib.rs
docs/: book.toml
examples/: docker-compose.coolify.yml  docker-compose.yml
flatpak/: org.leetium.Leetium.yml
plans/: 2026-02-11-plan-telegram-e2e-tests-real-platform.md  2026-02-12-plan-multi-agent-personas-and-identity-ui.md  2026-02-14-rustls-migration-and-openssl-reduction.md  2026-02-15-session-typed-refactor-plan.md  2026-02-15-typed-broadcast-event-enum.md  2026-02-16-ghostty-wasm-terminal-plan.md  2026-02-17-system-prompt-profiles-and-section-toggles.md  2026-02-17-terminal-multi-tmux-tabs-plan.md  2026-02-21-plan-minimal-core-optional-gateway.md  2026-02-27-plan-ios-secure-relay-proxy.md  2026-03-01-plan-channel-architecture-registry-capabilities.md  2026-03-01-plan-multi-nodes.md  BACKLOG.md  STATUS.md  config-store-trait-and-db-unification.md  core-memory-lifecycle-unification.md  digitalocean-tailscale-deployment.md  e2e-tests-oauth-provider-connection.md  firecracker-sandbox.md  postgres-pgvector-memory-backend.md  runtime-host-sandbox-prompt-context.md  tauri-native-ipc-desktop.md  voice-feature.md  wasm-implementation.md  (+1 more)
(+410 files in other folders)
