[package]
edition.workspace = true
name              = "leetium-agents"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:leetium-metrics"]

[dependencies]
anyhow          = { workspace = true }
async-stream    = { workspace = true }
async-trait     = { workspace = true }
futures         = { workspace = true }
leetium-common   = { workspace = true }
leetium-config   = { workspace = true }
leetium-sessions = { workspace = true }
leetium-skills   = { workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-stream    = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }

# Optional
leetium-metrics = { optional = true, workspace = true }

[dev-dependencies]
axum     = { workspace = true }
http     = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
