[package]
edition.workspace = true
name              = "leetium-auto-reply"
version.workspace = true

[dependencies]
leetium-agents   = { workspace = true }
leetium-common   = { workspace = true }
leetium-metrics  = { optional = true, workspace = true }
leetium-routing  = { workspace = true }
leetium-sessions = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[lints]
workspace = true
