[package]
edition.workspace = true
name              = "leetium-canvas"
version.workspace = true

[dependencies]
axum           = { workspace = true }
leetium-common  = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[lints]
workspace = true
