[package]
edition.workspace = true
name              = "leetium-channels"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
bytes          = { workspace = true }
http           = { workspace = true }
leetium-common  = { workspace = true }
leetium-config  = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[lints]
workspace = true
