[package]
edition.workspace    = true
name                 = "leetium-chat"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow                = { workspace = true }
async-trait           = { workspace = true }
base64                = { workspace = true }
chrono                = { features = ["serde"], optional = true, workspace = true }
chrono-tz             = { workspace = true }
futures               = { workspace = true }
leetium-agents         = { workspace = true }
leetium-channels       = { workspace = true }
leetium-common         = { workspace = true }
leetium-config         = { workspace = true }
leetium-memory         = { workspace = true }
leetium-metrics        = { optional = true, workspace = true }
leetium-plugins        = { workspace = true }
leetium-projects       = { workspace = true }
leetium-providers      = { workspace = true }
leetium-service-traits = { workspace = true }
leetium-sessions       = { workspace = true }
leetium-skills         = { workspace = true }
leetium-telegram       = { workspace = true }
leetium-tools          = { workspace = true }
leetium-voice          = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tokio-stream          = { workspace = true }
tracing               = { workspace = true }
uuid                  = { workspace = true }

[features]
local-llm          = []
metrics            = ["dep:leetium-metrics", "leetium-metrics/sqlite"]
push-notifications = ["dep:chrono"]
web-ui             = ["dep:chrono"]

[dev-dependencies]
leetium-channels = { workspace = true }
sqlx            = { workspace = true }
tempfile        = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }

[lints]
workspace = true
