[package]
edition.workspace = true
name              = "leetium-common"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
futures        = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
reqwest        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[lints]
workspace = true
