[package]
edition.workspace = true
name              = "leetium-cron"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
chrono         = { workspace = true }
chrono-tz      = { workspace = true }
cron           = { workspace = true }
leetium-agents  = { workspace = true }
leetium-common  = { workspace = true }
leetium-config  = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[dev-dependencies]
rstest   = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
