[package]
edition.workspace    = true
name                 = "leetium-gateway"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow                 = { workspace = true }
async-graphql          = { optional = true, workspace = true }
async-graphql-axum     = { optional = true, workspace = true }
async-trait            = { workspace = true }
axum                   = { workspace = true }
axum-extra             = { features = ["cookie"], workspace = true }
axum-server            = { optional = true, workspace = true }
base64                 = { workspace = true }
bytes                  = { workspace = true }
chrono                 = { features = ["serde"], optional = true, workspace = true }
chrono-tz              = { workspace = true }
dashmap                = { workspace = true }
futures                = { workspace = true }
gix                    = { workspace = true }
hostname               = { workspace = true }
hyper                  = { optional = true, workspace = true }
hyper-util             = { optional = true, workspace = true }
include_dir            = { optional = true, workspace = true }
mdns-sd                = { optional = true, workspace = true }
leetium-agents          = { workspace = true }
leetium-auth            = { workspace = true }
leetium-browser         = { workspace = true }
leetium-caldav          = { optional = true, workspace = true }
leetium-canvas          = { workspace = true }
leetium-channels        = { workspace = true }
leetium-chat            = { workspace = true }
leetium-common          = { workspace = true }
leetium-config          = { workspace = true }
leetium-cron            = { workspace = true }
leetium-discord         = { workspace = true }
leetium-graphql         = { optional = true, workspace = true }
leetium-mcp             = { workspace = true }
leetium-media           = { workspace = true }
leetium-memory          = { workspace = true }
leetium-metrics         = { optional = true, workspace = true }
leetium-msteams         = { workspace = true }
leetium-network-filter  = { features = ["proxy", "service"], optional = true, workspace = true }
leetium-oauth           = { workspace = true }
leetium-onboarding      = { workspace = true }
leetium-openclaw-import = { optional = true, workspace = true }
leetium-plugins         = { workspace = true }
leetium-projects        = { workspace = true }
leetium-protocol        = { workspace = true }
leetium-provider-setup  = { workspace = true }
leetium-providers       = { workspace = true }
leetium-qmd             = { optional = true, workspace = true }
leetium-routing         = { workspace = true }
leetium-service-traits  = { workspace = true }
leetium-sessions        = { workspace = true }
leetium-skills          = { workspace = true }
leetium-slack           = { optional = true, workspace = true }
leetium-tailscale       = { optional = true, workspace = true }
leetium-telegram        = { workspace = true }
leetium-tls             = { optional = true, workspace = true }
leetium-tools           = { workspace = true }
leetium-vault           = { optional = true, workspace = true }
leetium-voice           = { optional = true, workspace = true }
leetium-whatsapp        = { optional = true, workspace = true }
p256                   = { features = ["ecdsa"], optional = true, workspace = true }
portable-pty           = { optional = true, workspace = true }
pulldown-cmark         = { features = ["html"], workspace = true }
qrcode                 = { optional = true, workspace = true }
rand                   = { workspace = true }
rcgen                  = { optional = true, workspace = true }
reqwest                = { workspace = true }
rustls                 = { optional = true, workspace = true }
rustls-pemfile         = { optional = true, workspace = true }
secrecy                = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
sha2                   = { workspace = true }
sqlx                   = { workspace = true }
sysinfo                = { workspace = true }
thiserror              = { workspace = true }
time                   = { workspace = true }
tokio                  = { workspace = true }
tokio-rustls           = { optional = true, workspace = true }
tokio-stream           = { workspace = true }
tokio-tungstenite      = { workspace = true }
tokio-util             = { workspace = true }
toml                   = { workspace = true }
tower                  = { optional = true, workspace = true }
tower-http             = { features = ["catch-panic", "compression-gzip", "compression-zstd", "cors", "limit", "request-id", "sensitive-headers", "set-header", "trace"], workspace = true }
tracing                = { workspace = true }
tracing-subscriber     = { workspace = true }
url                    = { workspace = true }
urlencoding            = { workspace = true }
uuid                   = { workspace = true }
web-push               = { optional = true, workspace = true }
webauthn-rs            = { features = ["danger-allow-state-serialisation"], workspace = true }
which                  = { optional = true, workspace = true }

[features]
agent = []
caldav = ["dep:leetium-caldav"]
default = [
  "agent",
  "caldav",
  "file-watcher",
  "graphql",
  "local-llm",
  "local-llm-metal",
  "mdns",
  "metrics",
  "openclaw-import",
  "prometheus",
  "push-notifications",
  "qmd",
  "slack",
  "tailscale",
  "tls",
  "trusted-network",
  "vault",
  "voice",
  "wasm",
  "web-ui",
]
file-watcher = [
  "leetium-memory/file-watcher",
  "leetium-openclaw-import?/file-watcher",
  "leetium-skills/file-watcher",
]
graphql = ["dep:async-graphql", "dep:async-graphql-axum", "dep:leetium-graphql"]
local-embeddings = ["leetium-memory/local-embeddings"]
local-llm = [
  "leetium-chat/local-llm",
  "leetium-provider-setup/local-llm",
  "leetium-providers/local-llm",
]
local-llm-cuda = ["local-llm", "leetium-providers/local-llm-cuda"]
local-llm-metal = ["local-llm", "leetium-providers/local-llm-metal"]
mdns = ["dep:mdns-sd"]
metrics = [
  "dep:leetium-metrics",
  "leetium-chat/metrics",
  "leetium-discord/metrics",
  "leetium-metrics/sqlite",
  "leetium-msteams/metrics",
]
openclaw-import = ["dep:leetium-openclaw-import"]
prometheus = ["metrics", "leetium-metrics/prometheus"]
push-notifications = ["dep:chrono", "dep:p256", "dep:web-push", "leetium-chat/push-notifications"]
qmd = ["dep:leetium-qmd"]
slack = ["dep:leetium-slack", "leetium-slack/metrics"]
tailscale = ["dep:leetium-tailscale"]
tls = [
  "dep:axum-server",
  "dep:hyper",
  "dep:hyper-util",
  "dep:leetium-tls",
  "dep:rcgen",
  "dep:rustls",
  "dep:rustls-pemfile",
  "dep:tokio-rustls",
  "dep:tower",
]
trusted-network = ["dep:leetium-network-filter"]
vault = ["dep:leetium-vault", "leetium-auth/vault"]
voice = ["dep:leetium-voice"]
wasm = ["leetium-tools/wasm"]
web-ui = ["dep:include_dir", "dep:portable-pty", "dep:which", "leetium-chat/web-ui"]
whatsapp = ["dep:leetium-whatsapp", "dep:qrcode", "leetium-whatsapp/metrics"]

[dev-dependencies]
leetium-web        = { workspace = true }
reqwest           = { workspace = true }
sqlx              = { workspace = true }
tempfile          = { workspace = true }
tokio-tungstenite = { workspace = true }

[lints]
workspace = true
