[package]
edition.workspace = true
name              = "leetium-mcp"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:leetium-metrics"]

[dependencies]
async-trait    = { workspace = true }
futures        = { workspace = true }
leetium-common  = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
leetium-oauth   = { workspace = true }
reqwest        = { workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }
uuid           = { workspace = true }

[dev-dependencies]
mockito    = { workspace = true }
tempfile   = { workspace = true }
tokio-test = { workspace = true }
