[package]
edition.workspace = true
name              = "leetium-media"
version.workspace = true

[dependencies]
image          = { workspace = true }
leetium-common  = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
reqwest        = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[lints]
workspace = true
