[package]
edition.workspace = true
name              = "leetium-msteams"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
async-trait     = { workspace = true }
base64          = { workspace = true }
bytes           = { workspace = true }
http            = { workspace = true }
leetium-channels = { workspace = true }
leetium-common   = { workspace = true }
leetium-metrics  = { optional = true, workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
subtle          = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }
urlencoding     = { workspace = true }

[features]
metrics = ["dep:leetium-metrics"]

[lints]
workspace = true
