[package]
edition.workspace = true
name              = "leetium-node-host"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:leetium-metrics"]

[dependencies]
anyhow            = { workspace = true }
futures           = { workspace = true }
leetium-common.workspace = true
leetium-metrics    = { optional = true, workspace = true }
leetium-protocol   = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sysinfo           = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing           = { workspace = true }
url               = { workspace = true }
uuid              = { workspace = true }
which             = { workspace = true }

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], workspace = true }

[lints]
workspace = true
