[package]
edition.workspace = true
name              = "leetium-oauth"
version.workspace = true

[dependencies]
axum           = { workspace = true }
base64         = { workspace = true }
leetium-common.workspace = true
leetium-config  = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
rand           = { workspace = true }
reqwest        = { workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[dev-dependencies]
mockito  = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
