[package]
edition.workspace = true
name              = "leetium-onboarding"
version.workspace = true

[dependencies]
leetium-common  = { workspace = true }
leetium-config  = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
