[package]
edition.workspace = true
name              = "leetium-plugins"
version.workspace = true

[dependencies]
async-trait     = { workspace = true }
leetium-common   = { workspace = true }
leetium-config   = { workspace = true }
leetium-metrics  = { optional = true, workspace = true }
leetium-sessions = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
time            = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }
tracing         = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { features = ["macros", "rt"], workspace = true }

[lints]
workspace = true
