[package]
edition.workspace = true
name              = "leetium-projects"
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
leetium-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
