[package]
edition.workspace = true
name              = "leetium-protocol"
version.workspace = true

[dependencies]
leetium-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[lints]
workspace = true
