[package]
edition.workspace    = true
name                 = "leetium-provider-setup"
repository.workspace = true
version.workspace    = true

[dependencies]
async-trait           = { workspace = true }
leetium-agents         = { workspace = true }
leetium-common.workspace = true
leetium-config         = { workspace = true }
leetium-oauth          = { workspace = true }
leetium-providers      = { workspace = true }
leetium-service-traits = { workspace = true }
reqwest               = { workspace = true }
secrecy               = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }
url                   = { workspace = true }

[features]
local-llm = []

[dev-dependencies]
axum     = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
