[package]
description       = "QMD memory backend for leetium - optional sidecar-based hybrid search"
edition.workspace = true
name              = "leetium-qmd"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
async-trait   = { workspace = true }
leetium-memory = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
