[package]
edition.workspace = true
name              = "leetium-routing"
version.workspace = true

[dependencies]
leetium-common   = { workspace = true }
leetium-config   = { workspace = true }
leetium-metrics  = { optional = true, workspace = true }
leetium-sessions = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[features]
default = []
metrics = ["dep:leetium-metrics"]

[lints]
workspace = true
