[package]
edition.workspace    = true
name                 = "leetium-schema-export"
repository.workspace = true
version.workspace    = true

[build-dependencies]
leetium-graphql        = { workspace = true }
leetium-service-traits = { workspace = true }
serde_json            = { workspace = true }
tokio                 = { workspace = true }
