[package]
edition.workspace    = true
name                 = "leetium-service-traits"
repository.workspace = true
version.workspace    = true

[dependencies]
async-trait     = { workspace = true }
bytes           = { workspace = true }
leetium-protocol = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }

[lints]
workspace = true
